--- a/edge-app/localDashboard.html
+++ b/edge-app/localDashboard.html
@@ -11,6 +11,11 @@
     <h1>Current Configuration</h1>
     <table>
         <tr>
+            <td>App version</td>
+            <td>:</td>
+            <td>{{ .appVersion }}</td>
+        </tr>
+        <tr>
             <td>Database path</td>
             <td>:</td>
             <td>{{ .configDatabasePath }}</td>
@@ -26,7 +31,7 @@
             <td>{{ .configIntervalSendData }}</td>
         </tr>
         <tr>
-            <td>Platofmr</td>
+            <td>Platform</td>
             <td>:</td>
             <td>{{ .configPlatform }}</td>
         </tr>
